// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders an error state 1`] = `<div />`;

exports[`Sidebar component renders correctly 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
  >
    <use
      xlinkHref="#id"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/collections/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            something
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/channels/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            something else
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            href="/account"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Logout
          </a>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;

exports[`Sidebar component renders loading state 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
  >
    <use
      xlinkHref="#id"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            href="/account"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Logout
          </a>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;
